--- a/src/styles/Restaurant/_resbutton.scss
+++ b/src/styles/Restaurant/_resbutton.scss
@@ -22,6 +22,7 @@
 
 .map-select,
 .map-seacrh {
+
   @include sortBtn($light-green, 5px 32px, 20px);
 }
 
@@ -31,6 +32,7 @@
   &:hover {
     background-color: #fb6007c0;
     color: white;
+    cursor: pointer;
     // box-shadow: 8px 8px 0 0 #fb600769;
     // transition: 0.5s;
   }
