--- a/src/styles/Restaurant/_resproduct.scss
+++ b/src/styles/Restaurant/_resproduct.scss
@@ -50,6 +50,9 @@
 }
 //菜單產品
 .res-menu {
+  &:hover{
+    cursor: pointer;
+  }
   .res-product-body {
     padding: 5px 10px;
     border-left: 2px solid $light-green;
