--- a/src/styles/Member/_MemberLogin.scss
+++ b/src/styles/Member/_MemberLogin.scss
@@ -107,3 +107,7 @@
       .breadcrumb, .footer,.text-muted{
         display:none;
       }
+      .eye{
+        display: inline;
+        padding: 10px;
+      }      
