微調購物車CSS again XDDD

--- a/src/styles/Carts/CartConfirmOrder.scss
+++ b/src/styles/Carts/CartConfirmOrder.scss
@@ -35,7 +35,7 @@
 
   h1 {
     font-family: var(--Font-Family);
-    color: var(--Second-color);
+    color: hsla(22, 97%, 51%, 0.5);
     font-weight: var(--Second-Font-Weight);
     margin: 80px auto;
   }
