--- a/src/styles/Restaurant/_resbanner.scss
+++ b/src/styles/Restaurant/_resbanner.scss
@@ -44,7 +44,7 @@
 .map-search {
   position: relative;
   @include mobile {
-    padding: 5px 20px;
+    padding: 2px 20px;
   }
 }
 
@@ -68,9 +68,10 @@
     font-size: 16px;
   }
   @include mobile {
-    width: 90%;
+    width: 94%;
+    height: 45px;
     margin-bottom: 10px;
-    font-size: 14px;
+    font-size: 12px;
   }
 }
 
@@ -91,7 +92,12 @@
     top: 8px;
   }
   @include mobile {
-    width: 80px;
-    right: 8%;
+    width: 60px;
+   height: 34px;
+    right: 5%;
+    top: 6px;
+    svg{
+      padding-bottom: 8px;
+    }
   }
 }
