20211114_cart_修復點數輸入特殊字元仍能成功的問題、CSS樣式優化

--- a/src/styles/Carts/CartConfirmOrder.scss
+++ b/src/styles/Carts/CartConfirmOrder.scss
@@ -27,7 +27,9 @@
       }
     }
   }
-  .favisa {
+  .favisa,
+  .fatruck,
+  .fastore {
     font-size: 40px;
     color: var(--Third-color);
     margin: auto 0;
@@ -60,7 +62,9 @@
 
     .table {
       td {
-        font-size: var(--Font-orderconfirmdetail-size-mobile);
+        font-size: var(
+          --Font-orderconfirmdetail-size-mobile
+        );
       }
     }
     h1 {
