--- a/src/styles/article/Article.scss
+++ b/src/styles/article/Article.scss
@@ -17,6 +17,7 @@
 }
 
 //主視覺KV
+
 #articlePage {
   img {
     width: 100%;
@@ -367,8 +368,11 @@
     }
 
     .mostPopularItems {
+      a{
+        width: 100%;
+      }
       border-bottom: 1px solid rgba(143, 192, 101, 0.5);
-      padding: 10px;
+      padding: 10px 0;
       list-style: none;
     }
 
