--- a/src/styles/Carts/CartPreOrder.scss
+++ b/src/styles/Carts/CartPreOrder.scss
@@ -58,11 +58,21 @@
         color: var(--Primary-color);
         margin: 0 10px;
         cursor: pointer;
+        transition: 1s;
+      }
+      .countIcon:hover {
+        color: var(--Third-color);
+        transition: 1s;
       }
       .trashIcon {
         color: var(--Second-color);
         font-size: 24px;
         cursor: pointer;
+        transition: 1s;
+      }
+      .trashIcon:hover {
+        color: #ffb606;
+        transition: 1s;
       }
     }
 
