--- a/src/styles/Carts/CartManage.scss
+++ b/src/styles/Carts/CartManage.scss
@@ -286,7 +286,6 @@
       height: 400px;
       font-family: var(--Font-Family);
       .PopCard {
-        
         h6 {
           font-weight: var(--Second-Font-Weight);
           color: var(--Third-color);
@@ -507,6 +506,14 @@
     font-family: var(--Font-Family);
     font-weight: var(--Second-Font-Weight);
     font-size: var(--Order-list-contnet-size);
+    transition: 0.5s;
+  }
+  .import:hover {
+    background-color: var(--Third-color);
+    transition: 0.5s;
+  }
+  .import:focus {
+    background-color: var(--Third-color);
   }
   @include mobile() {
     justify-content: center;
